2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asf8/f8.h,
	  sdas/asf8/f8mch.c,
	  sim/ucsim/src/sims/f8.src/disass.cc,
	  sim/ucsim/src/sims/f8.src/f8.cc,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/ialu.cc:
	  Fixes for two-operand 16 and 16/8 bit f8 instructions.
	  src/f8/gen.c:
	  Improve use of prefixed two-operand 16 and 16/8 bit f8 instructions.

2024-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix generation of invalid asm for bit-field read.
	* sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc:
	  Fix ldw y, z f8 instruction simulation.

2024-11-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/typed-enum.c,
	  support/valdiag/tests/typed-enum.c:
	  Implement C23's explicitly typed enums, see [feature-requests:#847].

2024-11-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp:
	  Fallback to std::multimap instead of boost::container::flat_multimap for all boost up to 1.85.0.
	* src/SDCCopt.c,
	  support/regression/tests/bug-3780.c:
	  Fix bug #3780.
	* src/SDCCsystem.c:
	  Fix bug #3616 via patch #482 by Janko Stamenović.

2024-11-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/cpp/gcc/c-family/c-ppoutput.cc:
	  Fix bug #3794.
	* support/valdiag/tests/bug-3014.c:
	  Adapt test to recent K&R changes.

2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Do not try to include XA-51 simulator (which is no longer built by default) in Windows installer.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Add syntactic support for K&R-style functions.
